# dlibdnn

./: .gitignore  CMakeLists.txt  fhog_object_detector_ex.cpp
share/: fakegun.svm  knife_detector.svm
src/: capture.cpp  demo.cpp  demo_fhog_track.cpp  demo_labelling.cpp  demo_sift_track.cpp  fhog_object_detector_ex.cpp
